--- a/_includes/layouts/post.ejs
+++ b/_includes/layouts/post.ejs
@@ -1,5 +1,9 @@
 ---
 layout: layouts/base.ejs
 ---
-<h1><%= title %></h1>
+<main class="l-main">
+  <div class="l-spacing-l">
+    <%- content %>
+  </div>
+</main>
 
