--- a/_includes/layouts/partials/cards-grid.njk
+++ b/_includes/layouts/partials/cards-grid.njk
@@ -1,13 +1,3 @@
----
-layout: layouts/base.njk
-title: Tags
-img: 'https://source.unsplash.com/1600x900/?nature,water'
-permalink: /tags/
----
-
-{% block content %}
-
-{# content #}
 <main class="l-main">
   {# filters #}
   <div class="l-spacing-m">
@@ -15,7 +5,7 @@ permalink: /tags/
   </div>
   <div class="l-spacing-l">
     <div class="o-cards-grid">
-      {%- for entry in collections.tags %}
+      {%- for entry in list %}
         {% set card = { data: entry.data, modifiers: ['squared-image'], hasImg: true } %}
         {% include '_includes/layouts/partials/card.njk' %}
       {%- endfor %}
@@ -25,10 +15,3 @@ permalink: /tags/
     <a class="c-button" href="#">Load more post...</a>
   </div>
 </main>
-
-{% endblock %}
-
-{# {% for tag in collections.tags %}
-  {% set tagUrl %}/tags/{{ tag }}/{% endset %}
-  <a href="{{ tagUrl | url }}" class="tag">{{ tag }}</a>
-{% endfor %} #}
