--- a/_includes/layouts/partials/filters.njk
+++ b/_includes/layouts/partials/filters.njk
@@ -1,12 +1,8 @@
 <fieldset class="c-filter">
   <legend class="c-filter__legend">Filter by:</legend>
-  {%- for label in collections.tags %}
-  <div class="c-filter__item"><input class="c-filter__input" type="checkbox" id="{{ label }}" name="interest" value="{{ label }}"><label class="c-label" for="{{ label }}">{{ label | dump }}</label></div>
+  {%- for tag in collections.tagList %}
+  {# <div class="c-filter__item"><input class="c-filter__input" type="checkbox" id="{{ label }}" name="interest" value="{{ label }}"><label class="c-label" for="{{ label }}">{{ label }}</label></div> #}
+  {% set tagUrl %}/tags/{{ tag }}/{% endset %}
+  <a href="{{ tagUrl | url }}" class="c-label">{{ tag }}</a>
   {%- endfor %}
 </fieldset>
-
-{# {% for tag in collections.tags %}
-  {% set tagUrl %}/tags/{{ tag }}/{% endset %}
-  <a href="{{ tagUrl | url }}" class="tag">{{ tag }}</a>
-{% endfor %}
- #}
