--- a/index.njk
+++ b/index.njk
@@ -5,7 +5,7 @@ img: 'https://source.unsplash.com/1600x900/?nature,water'
 eleventyNavigation:
   key: home
   order: 1
-
+hasHero: true
 ---
 
 HOMEPAGE
