--- a/index.njk
+++ b/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
 title: homepage
-img: 'https://source.unsplash.com/1600x900/?nature,water'
+img: 'https://images.unsplash.com/photo-1492892132812-a00a8b245c45?ixlib=rb-1.2.1&auto=format&fit=crop&w=3150&q=80'
 eleventyNavigation:
   key: home
   order: 1
