--- a/_includes/layouts/projects.njk
+++ b/_includes/layouts/projects.njk
@@ -11,17 +11,11 @@ layout: layouts/base.njk
     {%- include "_includes/layouts/partials/filters.njk" %}
   </div>
   <div class="l-spacing-l">
-    <div class="o-cards-grid">
-      {%- for entry in collections.projects %}
-        {% set card = { data: entry.data } %}
-        {% include '_includes/layouts/partials/card.njk' %}
-      {%- endfor %}
+    {%- for entry in collections.projects %}
+      {% set card = { data: entry.data, modifiers: ['highlight-left'] } %}
+      {% include '_includes/layouts/partials/card.njk' %}
+    {%- endfor %}
     </div>
-  </div>
-  <div class="o-distributed o-distributed--center l-spacing-l">
-    <a class="c-button" href="#">Load more post...</a>
-  </div>
 </main>
 
 {% endblock %}
-
