--- a/index.njk
+++ b/index.njk
@@ -5,8 +5,6 @@ img: 'https://images.unsplash.com/photo-1492892132812-a00a8b245c45?ixlib=rb-1.2.
 eleventyNavigation:
   key: home
   order: 1
-hasHero: true
+hasHomeContent: true
 ---
-
-HOMEPAGE
 
