--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -3,7 +3,7 @@ layout: layouts/base.njk
 hasHero: true
 ---
 <main class="l-main">
-  <article class="c-article-section">
+  <article class="c-article-section l-spacing-l">
     <h1>{{ title }}</h1>
     <time class="c-article-section__date" datetime="{{ date }}">{{ date }}</time>
 
@@ -17,10 +17,11 @@ hasHero: true
     {{ content | safe }}
   </article>
 
-  <div class="o-distributed o-distributed--between l-spacing-l">
-    <a class="c-button c-button--border" href="#">prev</a>
-    <a class="c-button c-button--border" href="#">next</a>
+  {% if eleventyNavigation.key !== 'about' %}
+  <div class="o-distributed o-distributed--center l-spacing-l">
+    <a class="c-button" href="#">Take me to another post!</a>
   </div>
+  {% endif %}
 </main>
 
 
