feat: add syntax highlight and quotes

--- a/_includes/layouts/base-content.njk
+++ b/_includes/layouts/base-content.njk
@@ -1,8 +1,9 @@
 {# hero #}
-{% if hasHero %}
+
 <div class="l-spacing-m">
+  {# {% set hero = { data: entry.data } %} #}
   {% include 'layouts/partials/hero.njk' %}
 </div>
-{% endif %}
+
 {# content #}
 {{ content | safe }}
