--- a/_includes/layouts/home-content.njk
+++ b/_includes/layouts/home-content.njk
@@ -1,5 +1,7 @@
 {# hero #}
 <div class="l-spacing-m">
+  {% set hero = { data: entry.data } %}
+
   {% set title = 'blog' %}
   {% include 'layouts/partials/hero.njk' %}
 
