--- a/_includes/layouts/partials/hero.njk
+++ b/_includes/layouts/partials/hero.njk
@@ -8,8 +8,16 @@
 <section class="c-hero {{ modifiers }} ">
   <img class="c-hero__img" src="{{ img }}" alt="">
     <div class="l-main">
-      <h1>{{ quote | safe }}</h1>
-      <h2 class="c-hero__subtitle">{{ quoteAuthor }}</h2>
+      {% set heroTitle = title %}
+      {% if quote %}
+        {% set heroTitle = quote %}
+      {% endif %}
+      <h1>{{ heroTitle | safe }}</h1>
+      {% set heroSubtitle = subtitle %}
+      {% if quoteAuthor %}
+        {% set heroSubtitle = quoteAuthor %}
+      {% endif %}
+      <h2 class="c-hero__subtitle">{{ heroSubtitle }}</h2>
     </div>
     <a href="{{ imgCreditsUrl }}" class="c-hero__credits">photo by {{ imgCredits }} on Unsplash</a>
 </section>
