--- a/_includes/layouts/partials/cards-grid.njk
+++ b/_includes/layouts/partials/cards-grid.njk
@@ -17,7 +17,7 @@
           {% elif categoryFilter == 'projects' %}
             {% set card = { data: entry.data, modifiers: ['highlight-left'], hasContent: true } %}
           {% elif categoryFilter == 'til' %}
-            {% set card = { data: entry.data, modifiers: ['highlight-top'] } %}
+            {% set card = { data: entry.data, modifiers: ['highlight-top'], hasContent: true, number: '2' } %}
           {% elif categoryFilter == 'usefulresources' %}
             {% set card = { data: entry.data, modifiers: ['highlight-left'] } %}
           {% endif %}
