--- a/_includes/layouts/partials/hero.njk
+++ b/_includes/layouts/partials/hero.njk
@@ -19,5 +19,5 @@
       {% endif %}
       <h2 class="c-hero__subtitle">{{ heroSubtitle }}</h2>
     </div>
-    <a href="{{ imgCreditsUrl }}" class="c-hero__credits">photo by {{ imgCredits }} on Unsplash</a>
+    <span class="c-hero__credits">photo by <a href="{{ imgAuthorProfile }}" target="_blank">{{ imgAuthorName }}</a> on <a href="{{ img }}" target="_blank">Unsplash</a></span>
 </section>
