--- a/_includes/layouts/partials/card.njk
+++ b/_includes/layouts/partials/card.njk
@@ -31,7 +31,7 @@
 
     <div class="c-card__bottom">
       {% if card.data.date %}
-      <time class="c-card__date" time="{{ card.data.date }}">{{ card.data.date }}</time>
+      <time class="c-card__date" time="{{ card.data.date }}">{{ card.data.date.toDateString() }}</time>
       {% endif %}
       <div class="c-card__tags">
         {% for tag in card.data.tags %}
