--- a/_includes/layouts/partials/footer.njk
+++ b/_includes/layouts/partials/footer.njk
@@ -1,7 +1,15 @@
 <footer class="c-footer">
   <div class="l-main">
-    <a class="c-footer__content" href="https://twitter.com/giulia_chiola">Follow me on
-      {% include '../../../svg/twitter.svg' %}
-    </a>
+    <div class="c-footer__group">
+      <a class="c-footer__item" href="https://twitter.com/giulia_chiola" target="_blank">
+        {% include '../../../svg/twitter.svg' %}
+      </a>
+      <a class="c-footer__item" href="https://github.com/giuliachiola" target="_blank">
+        {% include '../../../svg/github.svg' %}
+      </a>
+      <a class="c-footer__item" href="https://codepen.io/giuliachiola/pens/public" target="_blank">
+        {% include '../../../svg/codepen.svg' %}
+      </a>
+    </div>
   </div>
 </footer>
