feat: update cards

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -13,7 +13,7 @@
 
       {% if hasHomeContent %}
         {# home content #}
-        {% include './home-content.njk' %}
+        {% include 'layouts/partials/photogrid.njk' %}
       {% else %}
         {# base content #}
         {% include './base-content.njk' %}
