--- a/tags.njk
+++ b/tags.njk
@@ -1,6 +1,9 @@
 ---
 title: Tag {{ tag }}
 layout: layouts/base.njk
+img: 'https://source.unsplash.com/-4uJ_qPU0_E'
+imgAuthorProfile: 'https://unsplash.com/@landscapeplaces'
+imgAuthorName: '@landscapeplaces'
 pagination:
   data: collections
   size: 1
