--- a/_includes/layouts/partials/hero.njk
+++ b/_includes/layouts/partials/hero.njk
@@ -8,7 +8,8 @@
 <section class="c-hero {{ modifiers }} ">
   <img class="c-hero__img" src="{{ img }}" alt="">
     <div class="l-main">
-      {% set heroTitle = title %}
+      {# TODO: renderData.title is temporary to fix tags.njk title #}
+      {% set heroTitle = renderData.title or title %}
       {% if quote %}
         {% set heroTitle = quote %}
       {% endif %}
