--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -2,23 +2,7 @@
 layout: layouts/base.njk
 ---
 <main class="l-main">
-  <article class="c-article-section l-spacing-l">
-    <h1>{{ title }}</h1>
-    {% if date %}
-      <time class="c-article-section__date" datetime="{{ date }}">{{ date.toDateString() }}</time>
-    {% endif %}
-
-    {# tags #}
-    {%- for tag in tags %}
-    {% set tagUrl %}/tags/{{ tag }}/{% endset %}
-      <a href="{{ tagUrl | url }}" class="c-label">{{ tag }}</a>
-    {%- endfor %}
-
-    {# content #}
-    <div class="c-article-section__content">
-      {{ content | safe }}
-    </div>
-  </article>
+  {% include 'layouts/partials/article-section.njk' %}
 
   {% if eleventyNavigation.key !== 'about' %}
     {% for randomTil in collections.randomTilArr %}
