--- a/tags.njk
+++ b/tags.njk
@@ -10,7 +10,7 @@ pagination:
   size: 1
   alias: tag
 renderData:
-  title: 'Tagged posts<br><span class="u-ty-uppercase u-ty-italic">{{ tag }}</span>'
+  title: 'Tagged posts<br><span class="c-hero__title-custom">{{ tag }}</span>'
 ---
 
 {# FIXME: temporary use renderData.title --> https://github.com/11ty/eleventy-base-blog/issues/15 #}
