--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -1,4 +1,4 @@
-<article class="c-article-section l-spacing-l">
+<article class="c-article-section l-spacing-l {% if isCustomPost %}c-article-section--custom{% endif %}">
   <h1>{{ title }}</h1>
 
   <div class="c-article-section__top l-spacing-m">
@@ -15,13 +15,32 @@
       {%- endfor %}
     </div>
 
-    <div class="c-article-section__share">
-      <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
+    {% if not isCustomPost %}
+      <div class="c-article-section__share">
+        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+    {% endif %}
   </div>
 
   {# content #}
   <div class="c-article-section__content">
     {{ content | safe }}
+  </div>
+
+  {# bottom #}
+  <div class="c-article-section__bottom">
+    {# tags #}
+    {%- for tag in tags %}
+    {% set tagUrl %}/tags/{{ tag }}/{% endset %}
+      <a href="{{ tagUrl | url }}" class="c-label">{{ tag }}</a>
+    {%- endfor %}
+
+    {% if not isCustomPost %}
+      {% for randomTil in collections.randomTilArr %}
+        <div class="o-distributed o-distributed--center l-spacing-l">
+          <a class="c-button" href="{{ randomTil.url | url }}">Take me to another post!</a>
+        </div>
+      {% endfor %}
+    {% endif %}
   </div>
 </article>
